SKY-346 Fix submenu alignment

--- a/components/NavDesktop/NavDesktop.module.scss
+++ b/components/NavDesktop/NavDesktop.module.scss
@@ -74,7 +74,6 @@
   grid-auto-flow: column;
   margin-top: 16px;
   padding: 20px 0 20px 10px;
-  left: -10px;
 }
 
 .subItem {
